--- a/Lectures/html/lecture-02.html
+++ b/Lectures/html/lecture-02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lecture 2: Technology Trends - CO224 Computer Architecture</title>
+    <title>Lecture 2: Technology Trends - Lectures on Computer Architecture</title>
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -18,12 +18,39 @@
                 Back to All Lectures
             </a>
             <h1 class="lecture-title">Lecture 2: Technology Trends</h1>
-            <p class="lecture-meta">CO224 - Computer Architecture</p>
+            <p class="lecture-meta">Lectures on Computer Architecture</p>
         </div>
     </header>
 
     <main class="lecture-content-area container">
         <div class="content-body">
+            <!-- Video Section -->
+            <div class="video-container">
+                <div class="video-thumbnail">
+                    <a href="#video-lecture-02" target="_blank" class="video-play-overlay">
+                        <img src="https://img.youtube.com/vi/VIDEO_ID_02/maxresdefault.jpg" 
+                             alt="Lecture 2 Video Thumbnail"
+                             onerror="this.src='https://img.youtube.com/vi/VIDEO_ID_02/hqdefault.jpg'">
+                        <div class="play-button">
+                            <svg width="68" height="48" viewBox="0 0 68 48" fill="none">
+                                <path d="M66.52 7.74c-.78-2.93-2.49-5.41-5.42-6.19C55.79.13 34 0 34 0S12.21.13 6.9 1.55c-2.93.78-4.63 3.26-5.42 6.19C.06 13.05 0 24 0 24s.06 10.95 1.48 16.26c.78 2.93 2.49 5.41 5.42 6.19C12.21 47.87 34 48 34 48s21.79-.13 27.1-1.55c2.93-.78 4.64-3.26 5.42-6.19C67.94 34.95 68 24 68 24s-.06-10.95-1.48-16.26z" fill="red"/>
+                                <path d="M45 24L27 14v20" fill="white"/>
+                            </svg>
+                        </div>
+                    </a>
+                </div>
+                <div class="video-info">
+                    <p class="video-notice">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <line x1="12" y1="16" x2="12" y2="12"></line>
+                            <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                        </svg>
+                        Click the thumbnail above to watch the video lecture on YouTube
+                    </p>
+                </div>
+            </div>
+
             <h1>Lecture 2: Technology Trends, Moore's Law, and Computer System Organization</h1>
 
 <h2>Introduction</h2>
@@ -41,8 +68,7 @@
 <strong>Background and Influence:</strong>
 
 <ul>
-<li>Co-founder of Intel Corporation</li>
-<li>Intel historically the biggest manufacturer of computer chips/processors</li>
+<li>Co-founder of Intel Corporation, historically the biggest manufacturer of computer chips/processors</li>
 <li>Most personal computers and high-end servers use Intel processors</li>
 <li>Made a prediction that shaped the entire semiconductor industry</li>
 </ul>
@@ -138,6 +164,8 @@
 <h3>2.1 Transistor Count Growth (1970-2010)</h3>
 
 <strong>Chart Analysis:</strong>
+
+<img src="../img/Chapter%201%20Moore's%20Law.jpg" alt="Computer System Abstraction Layers" width="600">
 
 <p>The historical data shows remarkable consistency with Moore's prediction:</p>
 
@@ -432,7 +460,7 @@
 <li><strong>2028 Target:</strong> 5 nm</li>
 </ul>
 
-<strong>Key Observation:</strong>
+<strong>Key Observations:</strong>
 
 <ul>
 <li><strong>Rate of reduction slowed down</strong> compared to original predictions</li>
@@ -639,7 +667,7 @@
 <p>Processor clock frequencies increased dramatically for over two decades:</p>
 
 <strong>Historical Progression:</strong>
-
+<img src="../img/Chapter%201%20Power%20Wall.jpg" alt="Computer System Abstraction Layers" width="600">
 <ul>
 <li><strong>286 (1982):</strong> 12.5 MHz</li>
 <li><strong>386 (1985):</strong> 16 MHz (author's first computer)</li>
@@ -944,6 +972,8 @@
 <strong>Early Multi-Core Processors:</strong>
 
 <strong>AMD Barcelona (2007):</strong>
+
+<img src="../img/Chapter%201%20AMD%20Barcelona.jpg" alt="Computer System Abstraction Layers" width="600">
 
 <ul>
 <li><strong>4 cores</strong> on single die</li>
