--- a/Lectures/html/lecture-04.html
+++ b/Lectures/html/lecture-04.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lecture 4: Introduction to ARM Assembly - CO224 Computer Architecture</title>
+    <title>Lecture 4: Introduction to ARM Assembly - Lectures on Computer Architecture</title>
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -18,12 +18,39 @@
                 Back to All Lectures
             </a>
             <h1 class="lecture-title">Lecture 4: Introduction to ARM Assembly</h1>
-            <p class="lecture-meta">CO224 - Computer Architecture</p>
+            <p class="lecture-meta">Lectures on Computer Architecture</p>
         </div>
     </header>
 
     <main class="lecture-content-area container">
         <div class="content-body">
+            <!-- Video Section -->
+            <div class="video-container">
+                <div class="video-thumbnail">
+                    <a href="#video-lecture-04" target="_blank" class="video-play-overlay">
+                        <img src="https://img.youtube.com/vi/VIDEO_ID_04/maxresdefault.jpg" 
+                             alt="Lecture 4 Video Thumbnail"
+                             onerror="this.src='https://img.youtube.com/vi/VIDEO_ID_04/hqdefault.jpg'">
+                        <div class="play-button">
+                            <svg width="68" height="48" viewBox="0 0 68 48" fill="none">
+                                <path d="M66.52 7.74c-.78-2.93-2.49-5.41-5.42-6.19C55.79.13 34 0 34 0S12.21.13 6.9 1.55c-2.93.78-4.63 3.26-5.42 6.19C.06 13.05 0 24 0 24s.06 10.95 1.48 16.26c.78 2.93 2.49 5.41 5.42 6.19C12.21 47.87 34 48 34 48s21.79-.13 27.1-1.55c2.93-.78 4.64-3.26 5.42-6.19C67.94 34.95 68 24 68 24s-.06-10.95-1.48-16.26z" fill="red"/>
+                                <path d="M45 24L27 14v20" fill="white"/>
+                            </svg>
+                        </div>
+                    </a>
+                </div>
+                <div class="video-info">
+                    <p class="video-notice">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <line x1="12" y1="16" x2="12" y2="12"></line>
+                            <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                        </svg>
+                        Click the thumbnail above to watch the video lecture on YouTube
+                    </p>
+                </div>
+            </div>
+
             <h1>Lecture 4: Introduction to ARM Assembly</h1>
 
 <h2>Introduction</h2>
@@ -49,12 +76,15 @@
 
 <strong>Contrasted with CISC (Complex Instruction Set Computer)</strong>
 
-<ul>
-<li>CISC: Variable-length instructions, complex operations</li>
-<li>CISC: Fewer registers, memory operands in arithmetic</li>
-<li>RISC: Simpler instructions, more instructions per program</li>
-<li>RISC: Regular structure enables pipelining</li>
-</ul>
+<p>| Feature | RISC | CISC |</p>
+<p>|---------|------|------|</p>
+<p>| <strong>Instruction Format</strong> | Simple, uniform format | Variable-length instructions |</p>
+<p>| <strong>Instruction Complexity</strong> | Simple instructions, more instructions per program | Complex operations |</p>
+<p>| <strong>Memory Access</strong> | Load/store architecture (only LOAD/STORE access memory) | Memory operands in arithmetic operations |</p>
+<p>| <strong>Registers</strong> | Large number of general-purpose registers | Fewer registers |</p>
+<p>| <strong>Hardware Design</strong> | Hardware simplicity for higher clock rates | More complex hardware |</p>
+<p>| <strong>Pipelining</strong> | Regular structure enables efficient pipelining | More difficult to pipeline |</p>
+
 
 <strong>ARM Design Principles</strong>
 
@@ -80,8 +110,8 @@
 </ul>
 
 <strong>Register Usage Conventions</strong>
-
-``<code>
+<img src="../img/Chapter%202%20ARM%20Conventions.jpg" alt="Computer System Abstraction Layers" width="600">
+<!-- ``<code>
 <p>R0-R3:   Argument/result registers</p>
 <p>- Pass parameters to functions</p>
 <p>- Return values from functions</p>
@@ -106,7 +136,7 @@
 <p>R15 (PC): Program Counter</p>
 <p>- Always points to next instruction</p>
 <p>- Modifying PC changes execution flow</p>
-</code>`<code>
+</code>`<code> -->
 
 <strong>Why So Many Registers?</strong>
 
