--- a/index.html
+++ b/index.html
@@ -1143,8 +1143,7 @@
     <footer>
       <div class="container">
         <p>
-          &copy; 2025 CO224 Computer Architecture Lecture Series. All rights
-          reserved.
+          &copy; 2025 Computer Architecture Lecture Series. All rights reserved.
         </p>
         <p>Department of Computer Engineering, University of Peradeniya</p>
       </div>
