Update course overview sections and instructor details for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
 
       <section class="instructor-section">
         <div class="instructor-info">
-          <h2>Course Instructor</h2>
+          <h2>About the Author</h2>
           <div class="instructor-card">
             <div class="instructor-details">
               <h4>Dr. Isuru Nawinne</h4>
