Update lecture materials for improved clarity and consistency across documents

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <section class="intro">
         <h2>About Practicals on Computer Architecture</h2>
         <p>
-          Hands-on laboratory sessions complement the lecture series, providing practical experience in assembly programming, processor design, and hardware description using Verilog. Students build their own processors and implement cache memory systems.
+          Hands-on practical series to complement the lecture series, providing practical experience processor microarchitecture and memory systems using Verilog. Students build their own processors and implement memory hierarchy with caching.
         </p>
 
         <div class="downloads">
@@ -1415,9 +1415,7 @@
                 South Wales, Sydney, Australia (2016). He teaches one of the
                 best computer architecture foundational courses in the world,
                 with materials and delivery methods that consistently produce
-                impressive outcomes. His students are regularly recruited by
-                world-leading computer architecture companies including ARM and
-                SiFive.
+                impressive outcomes. His students often pursue PhD research at world renowned universities, and are regularly recruited by world-leading computer architecture companies including ARM and SiFive.
               </p>
               <div class="instructor-links">
                 <a
